[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scripts/Menus/Join_Screen.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Menus/Group/Top.tscn" type="PackedScene" id=2]

[node name="Join_Screen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="All" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Top" parent="All" instance=ExtResource( 2 )]
margin_bottom = 147.0

[node name="Join_Label" type="Label" parent="All"]
margin_top = 151.0
margin_right = 1024.0
margin_bottom = 298.0
size_flags_horizontal = 3
size_flags_vertical = 7
text = "Rejoindre une partie"
align = 1
valign = 1

[node name="HBoxContainer" type="HBoxContainer" parent="All"]
margin_top = 302.0
margin_right = 1024.0
margin_bottom = 449.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="IP_Label" type="Label" parent="All/HBoxContainer"]
margin_top = 66.0
margin_right = 406.0
margin_bottom = 80.0
size_flags_horizontal = 3
text = "Adresse IP de l'autre joueur :"
align = 2
valign = 1

[node name="LineEdit" type="LineEdit" parent="All/HBoxContainer"]
margin_left = 410.0
margin_top = 61.0
margin_right = 613.0
margin_bottom = 85.0
size_flags_horizontal = 3
size_flags_vertical = 6
size_flags_stretch_ratio = 0.5

[node name="Join_Button" type="Button" parent="All/HBoxContainer"]
margin_left = 617.0
margin_top = 63.0
margin_right = 690.0
margin_bottom = 83.0
size_flags_horizontal = 2
size_flags_vertical = 6
text = "Rejoindre"

[node name="Instructions" type="Label" parent="All"]
margin_top = 453.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 7
text = "Pour jouer avec quelqu'un, il doit avoir préalablement créé une partie depuis le lobby, et t'avoir partagé son adresse IP. 
Ensuite, tu n'as qu'à rentrer son IP dans le champ ci-dessus, et laisser faire les 10 000 lignes de code magiques."
align = 1
valign = 1
[connection signal="text_entered" from="All/HBoxContainer/LineEdit" to="." method="_on_LineEdit_text_entered"]
[connection signal="pressed" from="All/HBoxContainer/Join_Button" to="." method="_on_Join_Button_pressed"]
